0028673: getsourcefile Draw command return different output on Linux and Windows platforms

The method Draw_Interpretor::add() has been corrected so that the command getsourcefile returned the relative path starting with "src" without leading "/" on all platforms.